[metadata]
name = PyPAC
# attr: pypac.__version__ via AST added in setuptools 46.4+, which doesn't support PY27.
version = 0.16.3
author = Carson Lam
author_email = 46059+carsonyl@users.noreply.github.com
description = Proxy auto-config and auto-discovery for Python.
long_description = file: README.rst, HISTORY.rst
keywords = pypac, pac, proxy, autoconfig, requests
url = https://github.com/carsonyl/pypac
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = pypac
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
install_requires =
    requests >= 2.0.0
    tldextract >= 2.2.3
    dukpy >= 0.2.2
    pyobjc-framework-SystemConfiguration >= 3.2.1; sys_platform=="darwin"

[options.extras_require]
socks = requests[socks] >= 2.10.0
dev = pytest; pytest-cov; mock; wheel

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
